:lipstick: Fix button appearance on iOS

--- a/app/src/components/playback-control/playback-control.scss
+++ b/app/src/components/playback-control/playback-control.scss
@@ -52,6 +52,7 @@ footer.playback {
       color: #fff;
       transition: color 0.5s;
       cursor: pointer;
+      margin: 0;
 
       &:disabled {
         opacity: 0.6;
